-fixed labels getting overlapped in bodytrack app (looks ugly for now)

--- a/fluxtream-web/src/main/webapp/css/bodytrack.css
+++ b/fluxtream-web/src/main/webapp/css/bodytrack.css
@@ -374,7 +374,6 @@
     min-width: 400px;
     height: 20px;
     padding: 0;
-    margin-top: -20px;
     z-index: 1;
 }
 
